data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3754.wast
;; 3. **Test for Maximum Number of Branches in 'br_table' with Call Invocation**:    - Check the behavior when 'br_table' is given the maximum allowable branches, followed by multiple function calls.    - Implement 'br_table' with maximum branches possible and an index near its boundary leading to valid 'call' instructions.    - This ensures the handling of the largest 'br_table' by both implementations and verifies correct index resolution.

(assert_invalid
 (module
   (func $f (param i32) (result i32)
     (call $g (local.get 0))
   )
   (func $g (param i32) (result i32)
     (i32.add (local.get 0) (i32.const 1))
   )
   (func $test (param i32) (result i32)
     (br_table 0 0 0 0 0 0 0 0 0 0 (local.get 0))
     (call $f (local.get 0))
   )
   (func (export "main") (param i32) (result i32)
     (call $test (local.get 0))
   )
 )
 "index out of bounds"
)